# search-algo-gui

./: CMakeLists.txt
src/: dijkstra_single_gui.cpp
